cabal-version: 2.2

name: junkyard
version: 0

extra-source-files:
  cbits/junkyard.c
  cbits/junkyard.h

executable junkyard
  build-depends:
    array,
    base,
    sqlite3-bindings,
    sqlite3-bindings-c,
    text,
  default-extensions:
    BlockArguments
    CApiFFI
    OverloadedStrings
  default-language: GHC2021
  c-sources: cbits/junkyard.c
  ghc-options: -Wall
  hs-source-dirs: .
  include-dirs: cbits
  includes:
    junkyard.h
    sqlite3ext.h
  main-is: Main.hs
