cabal-version: 2.2

name: sqlite-bindings
version: 0

extra-source-files:
  README.md
  cbits/sqlite.c
  cbits/sqlite.h

common component
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  build-depends: base
  c-sources: cbits/sqlite3.c
  cc-options:
    -- sqlite3_normalized_sql()
    -DSQLITE_ENABLE_NORMALIZE
    -- sqlite3_preupdate_blobwrite()
    -- sqlite3_preupdate_count()
    -- sqlite3_preupdate_depth()
    -- sqlite3_preupdate_hook()
    -- sqlite3_preupdate_new()
    -- sqlite3_preupdate_old()
    -DSQLITE_ENABLE_PREUPDATE_HOOK
  default-extensions:
    CApiFFI
    DuplicateRecordFields
    RankNTypes
  exposed-modules: Sqlite.Bindings
  hs-source-dirs: src
  include-dirs: cbits
  includes: sqlite3.h
  other-modules:
    Sqlite.Bindings.Internal.Constants
    Sqlite.Bindings.Internal.Functions
    Sqlite.Bindings.Internal.Objects

test-suite tests
  import: component
  build-depends:
    base,
    bytestring,
    sqlite-bindings,
    tasty,
    tasty-hunit,
    text ^>= 2.0,
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
