cabal-version: 2.2

name: sqlite3-bindings-c
version: 0

extra-source-files:
  README.md
  cbits/sqlite.c
  cbits/sqlite.h

common component
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  build-depends: base
  c-sources: cbits/sqlite3.c
  cc-options:
    -DSQLITE_ENABLE_COLUMN_METADATA
    -DSQLITE_ENABLE_NORMALIZE
    -DSQLITE_ENABLE_PREUPDATE_HOOK
    -DSQLITE_ENABLE_SNAPSHOT
    -DSQLITE_ENABLE_UNLOCK_NOTIFY
  default-extensions:
    CApiFFI
    DuplicateRecordFields
    RankNTypes
  exposed-modules: Sqlite3.Bindings.C
  hs-source-dirs: src
  include-dirs: cbits
  includes: sqlite3.h
  other-modules:
    Sqlite3.Bindings.C.Internal.Constants
    Sqlite3.Bindings.C.Internal.Functions
    Sqlite3.Bindings.C.Internal.Objects
