cabal-version: 2.2

description:
  Bindings to SQLite version 3.39.2
  .
  This package does /not/ use the PVP. Rather, the first version number corresponds to the underlying SQLite 3 minor
  version number, and the second version number is a monotonically increasing number that has no inherent meaning.
  (Please see the changelog for a detailed description of changes).
  .
  In other words, version @X.Y@ of this package corresponds to SQLite version @3.X.Z@, where @Y@ and @Z@ are unrelated.
  .
  See @<https://hackage.haskell.org/package/sqlite3-bindings sqlite3-bindings>@ for higher-level bindings.
name: sqlite3-bindings-c
version: 39.0

extra-source-files:
  README.md
  cbits/sqlite.c
  cbits/sqlite.h

library
  build-depends: base
  c-sources: cbits/sqlite3.c
  cc-options:
    -DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1
    -DSQLITE_DQS=0
    -DSQLITE_ENABLE_COLUMN_METADATA
    -DSQLITE_ENABLE_NORMALIZE
    -DSQLITE_ENABLE_PREUPDATE_HOOK
    -DSQLITE_ENABLE_SNAPSHOT
    -DSQLITE_ENABLE_UNLOCK_NOTIFY
    -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
    -DSQLITE_MAX_EXPR_DEPTH=0
    -DSQLITE_OMIT_AUTOINIT
    -DSQLITE_OMIT_DEPRECATED
    -DSQLITE_OMIT_SHARED_CACHE
    -DSQLITE_USE_ALLOCA
  default-extensions:
    CApiFFI
    DuplicateRecordFields
  default-language: GHC2021
  exposed-modules: Sqlite3.Bindings.C
  ghc-options: -Wall
  hs-source-dirs: src
  include-dirs: cbits
  includes: sqlite3.h
  other-modules:
    Sqlite3.Bindings.C.Internal.Constants
    Sqlite3.Bindings.C.Internal.Functions
    Sqlite3.Bindings.C.Internal.Objects
