cabal-version: 2.2

name: sqlite3-bindings
version: 39.0.0.0

extra-source-files:
  README.md

common component
  default-extensions:
    BangPatterns
    BlockArguments
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  build-depends:
    array,
    base,
    bytestring,
    sqlite3-bindings-c,
    text ^>= 2.0,
  exposed-modules: Sqlite3.Bindings
  hs-source-dirs: src
  other-modules:
    Sqlite3.Bindings.Internal.Constants
    Sqlite3.Bindings.Internal.Functions
    Sqlite3.Bindings.Internal.Objects
    Sqlite3.Bindings.Internal.Utils

test-suite tests
  import: component
  build-depends:
    base,
    bytestring,
    sqlite3-bindings,
    tasty,
    tasty-hunit,
    temporary ^>= 1.3,
    text,
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
