cabal-version: 2.2

description:
  Bindings to SQLite version 3.39.2
  .
  This package does /not/ use the PVP. Rather, the first version number corresponds to the underlying SQLite 3 minor
  version number, and the second version number is a monotonically increasing number that has no inherent meaning.
  (Please see the changelog for a detailed description of changes).
  .
  In other words, version @X.Y@ of this package corresponds to SQLite version @3.X.Z@, where @Y@ and @Z@ are unrelated.
  .
  See @<https://hackage.haskell.org/package/sqlite3-bindings-c sqlite3-bindings-c>@ for lower-level bindings.
name: sqlite3-bindings
version: 39.0

extra-source-files:
  README.md

common component
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  default-language: GHC2021
  ghc-options: -Wall

library
  import: component
  build-depends:
    array,
    base,
    bytestring,
    sqlite3-bindings-c,
    text ^>= 2.0,
  exposed-modules: Sqlite3.Bindings
  hs-source-dirs: src
  other-modules:
    Sqlite3.Bindings.Internal.Constants
    Sqlite3.Bindings.Internal.Functions
    Sqlite3.Bindings.Internal.Objects
    Sqlite3.Bindings.Internal.Utils

test-suite tests
  import: component
  build-depends:
    array,
    base,
    bytestring,
    sqlite3-bindings,
    tasty,
    tasty-hunit,
    temporary ^>= 1.3,
    text,
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
