cabal-version: 2.2

description:
  Bindings to SQLite version 3.39.2
  .
  See @<https://hackage.haskell.org/package/sqlite3-bindings-c sqlite3-bindings-c>@ for lower-level bindings.
name: sqlite3-bindings
version: 0.1.0

extra-source-files:
  README.md

common component
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ViewPatterns
  default-language: GHC2021
  ghc-options: -Wall

library
  import: component
  build-depends:
    array,
    base,
    bytestring,
    sqlite3-bindings-c,
    text ^>= 2.0,
  exposed-modules: Sqlite3.Bindings
  hs-source-dirs: src
  other-modules:
    Sqlite3.Bindings.Internal.Constants
    Sqlite3.Bindings.Internal.Functions
    Sqlite3.Bindings.Internal.Objects
    Sqlite3.Bindings.Internal.Utils

test-suite tests
  import: component
  build-depends:
    array,
    base,
    bytestring,
    sqlite3-bindings,
    tasty,
    tasty-hunit,
    temporary ^>= 1.3,
    text,
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
